# privacyideaadm

./: .gitignore  Changelog  DESCRIPTION  MANIFEST  Makefile  README.md  privacyidea  privacyidea-luks-assign  privacyidea-ssh-assign  privacyideaadm  privacyideaadm.1  pyproject.toml  requirements.txt  setup.cfg  setup.py
bash_completion/: privacyidea  privacyidea-luks-assign  privacyidea-ssh-assign
debian/: changelog  clean  control  privacyideaadm.install
doc/: Makefile  conf.py  index.rst
examples/: register-user.py
privacyideautils/: clientutils.py  etokenng.py  initdaplug.py  nitrokey.py  offline.py  pytoken-totp.py  pytoken.template.py  yubikey.py
privacyideautils/commands/: audit.py  certificate.py  config.py  machine.py  realm.py  resolver.py  securitymodule.py  token.py  user.py
scripts/: privacyidea  privacyidea-authorizedkeys  privacyidea-check-offline-otp  privacyidea-delete-registration  privacyidea-enroll-yubikey-piv  privacyidea-get-offline-otp  privacyidea-luks-assign  privacyidea-offline-otp  privacyidea-ssh-assign  privacyidea-validate
tests/: test_clientutils.py
zsh_completion/: _privacyidea
